#                                               -*- Autoconf -*-
AC_PREREQ([2.69])
AC_INIT([fuseiso], [0.0.0], [oldest.software.guy@gmail.com])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_SUBDIRS([fuseiso-code])
AC_CONFIG_FILES([
	Makefile
	fedora/fuseiso.spec
])
AC_OUTPUT
